# snowflake_arrow

./: .gitignore  README.md  mix.exs
.cargo/: config
.github/workflows/: ci.yml
bench/: benchmark.exs
benchmark/: large_varchar  small  small_arrow  small_json.json
lib/: benchmark.exs  snowflake_arrow.ex
lib/snowflake_arrow/: elixir_date_time.ex  snowflake_arrow_native.ex  td.ex
native/snowflake_arrow/: Cargo.toml
native/snowflake_arrow/.cargo/: config
native/snowflake_arrow/src/: elixir_types.rs  error.rs  helpers.rs  lib.rs  polars_convert.rs  rows.rs  rustler_helper.rs  serialize.rs  snowflake_dataframe.rs
native/snowflake_arrow/src/serialize/: iterator.rs  mod.rs  rust_serialize.rs
native/snowflake_arrow/tests/: integration_test.rs
priv/testing/: snowflake_json.json  x.arrow
priv/testing/base64/: SF_ARRAY.arrow  SF_BASE64_BINARY.arrow  SF_BOOLEAN.arrow  SF_DATE.arrow  SF_DECIMAL_38_2.arrow  SF_FLOAT.arrow  SF_FLOAT_TWO_PRECISION.arrow  SF_HEX_BINARY.arrow  SF_INTEGER.arrow  SF_OBJECT.arrow  SF_ROWS.json  SF_TIMESTAMP.arrow  SF_TIMESTAMP_LTZ.arrow  SF_TIMESTAMP_NTZ.arrow  SF_VARCHAR.arrow  SF_VARIANT_JSON.arrow  sf_full.arrow
test/: boolean_conversion_test.exs  chunk_conversion_test.exs  date_conversion_test.exs  decimal_conversion_test.exs  float_conversion_test.exs  numeric_conversion_test.exs  timestamp_conversion_test.exs  varchar_conversion_test.exs  variant_conversion_test.exs
