[package]
name = "snowflake_arrow"
version = "0.1.0"
edition = "2021"
authors = ["Josh Taylor <joshuataylorx@gmail.com>"]

[lib]
name = "snowflake_arrow"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.25.0"
rustler_sys = "2.2.0"
polars_snowflake = { path = "/home/josh/dev/polars_snowflake" }
polars = { git = "https://github.com/pola-rs/polars", features = ["simd", "performant", "dtype-full", "ipc"] , rev = "a731ec47acc9e8a70b3c908006008abaf26e2e29"}
chrono = "0.4"

[target.'cfg(not(any(all(windows, target_env = "gnu"), all(target_os = "linux", target_env = "musl"))))'.dependencies]
tikv-jemallocator = { version  = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
lto = true

[profile.dev]
debug = 1
