[package]
name = "snowflake_arrow"
version = "0.1.0"
edition = "2021"
authors = ["Josh Taylor <joshuataylorx@gmail.com>"]

[lib]
name = "snowflake_arrow"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { path = "../../../rustler/rustler" }
rustler_sys = { path = "../../../rustler/rustler_sys" }
polars = { git = "https://github.com/pola-rs/polars", branch="master", features = ["simd", "performant", "dtype-full", "ipc_streaming", "serde"]}
chrono = "0.4"

[target.'cfg(not(any(all(windows, target_env = "gnu"), all(target_os = "linux", target_env = "musl"))))'.dependencies]
tikv-jemallocator = { version  = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
#codegen-units = 1
#lto=true
incremental = true

[profile.dev]
debug = 1
opt-level = 3
#split-debuginfo = "unpacked"