[package]
name = "snowflake_arrow"
version = "0.1.0"
edition = "2021"
authors = ["Josh Taylor <joshuataylorx@gmail.com>"]

[lib]
name = "snowflake_arrow"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler" }
rustler_sys = { git = "https://github.com/rusterlium/rustler" }
polars = { git = "https://github.com/pola-rs/polars", features = ["simd", "performant", "dtype-full", "ipc_streaming"]}
chrono = "0.4"
thiserror = "1"
anyhow = "1"
ahash = "0.7.6"

[target.'cfg(not(any(all(windows, target_env = "gnu"), all(target_os = "linux", target_env = "musl"))))'.dependencies]
tikv-jemallocator = { version  = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
codegen-units = 1
lto=true
#incremental = true
#debug = 1

[profile.dev]
opt-level = 3
split-debuginfo = "unpacked"
debug = 1
